# Live-Streaming-Assistant

./: CMakeLists.txt  MotionSensor.cpp  MotionSensor.h  README.md  bluetoothsender.cpp  bluetoothsender.h  inv_mpu.cpp  main.cpp
piMouse/: MotionSensor.cpp
